src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: black;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --background-start-white: 250, 250, 250;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: var(--foreground-rgb);
  background: rgb(var(--background-start-white));
}
html {
  --scroll-behavior: smooth !important;
  scroll-behavior: smooth !important;
}

#titlePresentation,
#buttonPresentation {
  z-index: 50;
  animation: fade 4s;
}

@keyframes fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
    z-index: 50;
  }
}

